--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shruti Dhariya</h1>
-      <p><h2 color: #45505b>Data Scientist | Data Analyst | Business Analyst </h2></p>
+      <p><h2 color: #45505b>Data Scientist | Data Analyst | Business Analyst | Machine Learning Engineer</h2></p>
       <p>Expertise in Python | NumPy | Pandas | Gen-AI | Machine Learning | Deep Learning with rich experience in IIOT</p>
       <div class="social-links">
         <a href="https://github.com/shrutidhariya" class="Github" target="_blank"><i class="bx bxl-github"></i></a>
