--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="resume-item">
               <h4>Data Science Intern</h4>
               <h5>2024 - Present</h5>
-              <p><em>Learnbay (Remote)</em></p>
+              <p><em>Learnvista Private limited (Remote)</em></p>
               <ul>
                 <li>Analyzed and preprocessed datasets using Python and Pandas, ensuring data quality and integrity, and performed exploratory data analysis (EDA) to uncover key insights and patterns through univariate and bivariate visualizations.</li>
                 <li>Developed, compared, and optimized multiple machine learning models, generating predictions and exporting results to an CSV file, providing actionable insights on customer churn.</li>
