--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
 
             <div class="resume-item">
-              <h4><a href="https://www.coursera.org/account/accomplishments/specialization/J0V5E1NFEVR2" title="Ctrl+Click to view Certificate">Google Professional Data Analytics Certification</a></h4>
+              <h4><a href="https://www.coursera.org/account/accomplishments/specialization/J0V5E1NFEVR2" title="Ctrl+Click to view Certificate">Google Professional Data Analytics</a></h4>
               <p><em>Google</em></p>
               <p><strong>Data Analysis · Data Visualization · Microsoft Excel · SQL · Tableau · Analytical Skills · R · Google BigQuery · Big Data · Big Data Analytics · Presentation Skills</strong></p>
             </div>
