--- a/index.html
+++ b/index.html
@@ -285,6 +285,19 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>AI Voice News Agent using Google ADK</h4>
+                <p>Generative AI</p>
+                <div class="portfolio-links">
+                  <a href="FinancialConsumerComplaints.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
@@ -369,3 +382,4 @@
 </body>
 
 </html>
+
