--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-card">Internship</li>
               <li data-filter=".filter-app">Tableau</li>
+              <li data-filter=".filter-app">Gen-AI</li>
               <!-- <li data-filter=".filter-web">Internship</li> -->
             </ul>
           </div>
@@ -271,7 +272,7 @@
               </div>
             </div>
           </div>
-
+        <!-- Gen AI-->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
@@ -382,4 +383,5 @@
 </body>
 
 </html>
+
 
